modified:   Ch10/Ch10-kMeans.ipynb

--- a/Ch03/Ch03-tree.ipynb
+++ b/Ch03/Ch03-tree.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
        "0.9709505944546686"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
        "1.3709505944546687"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
        "{'no surfacing': {0: 'no', 1: {'flippers': {0: 'no', 1: 'yes'}}}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +360,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAEACAYAAABWLgY0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XtcTfn6B/BPpaQxqVy7KZMSjUpEUWxMqDHKuJThMBgM\nc44mZ5y5uMQ4Y6YZgxmXmeG4hFHHPRwVOnaYUyc/iSFUlC6uodJ033v9/nDaithbdu1a+/N+vby0\n2t+99rO/O4+n71rrWTqCIAggIiJR0tV0AERE1HCY5ImIRIxJnohIxJjkiYhEjEmeiEjEmOSJiERM\naZKfPn06OnbsCGdn5+eOmTt3Luzt7eHq6oqUlBS1BkhERPWnNMlPnToVsbGxz308Ojoa165dQ3p6\nOn755Rd8+OGHag2QiIjqT2mS9/Lygqmp6XMfj4qKwuTJkwEA/fr1Q2FhIe7cuaO+CImIqN5eeU0+\nLy8P1tbWim1LS0vk5eW96m6JiEgNXjnJ19UVQUdH51V3S0REatDiVXdgZWWFnJwcxXZubi4sLCzq\nHLt69WoUFBQotiUSCSQSyauG0CxJpVKtfe9P41w8wbl4QpvnQiqVQiqVKrZNTEzw8ccf12tfKiV5\nQRDqrNgBYNSoUVi3bh0CAwORmJgIExMTdOzYsc6xBQUFWLJkSb0CFRtt/gF+GufiCc7FE9o8F08X\nwK+SN5Um+ffeew9SqRT3799H586dsXTpUlRUVEBHRwczZ86En58fjhw5gq5du+K1117Dli1b6h0M\nERGpl9Ikv3PnTqU7Wbt2rVqCISIi9dJb0sjrJ7a2to35ck0a5+IJzsUTnIsnOBdP1HcudHjTECIi\n8WLvGiIiEWOSJyISMSZ5IiIRY5InIhIxJnkiIhFjkiciEjEmeSIiEWOSJyISMSZ5IiIRY5InIhIx\nJnkiIhFjkiciEjEmeSIiEWOSJyISMSZ5IiIRY5InIhIxJnkiIhFjkiciEjEmeSIiEWOSJyISMSZ5\nIiIRY5InIhIxJnkiIhFjkiciEjEmeSIiEWOSJyISMSZ5IiIRY5InIhIxJnkiIhFjkiciEjEmeSIi\nEWOSJyISMSZ5IiIRY5InIhIxlZJ8TEwMHB0d4eDggLCwsGcez8nJwZAhQ+Dm5gZXV1dER0erPVAi\nInp5OoIgCC8aIJfL4eDggLi4OFhYWMDd3R2RkZFwdHRUjJk1axbc3Nwwa9YsXL58GX5+fsjMzGzw\n4ImI6MWUVvJJSUmwt7eHjY0N9PX1ERQUhKioqNo70dVFUVERAKCgoACWlpYNEy0REb2UFsoG5OXl\nwdraWrFtZWWFpKSkWmNCQ0MxbNgw/PjjjygpKcHx48fVHykREb00pUm+rtUcHR2dWtsRERGYOnUq\nQkJCkJiYiEmTJuHSpUvPPE8qlUIqlSq2JRIJJBLJy0dNRCRi6syVSpO8lZUVsrOzFdu5ubmwsLCo\nNWbTpk2IjY0FAHh4eKCsrAz5+flo165drXFM6k1PZGQkkpKSsGLFCujq8mQroqZAnblS6b9qd3d3\nZGRk4MaNG6ioqEBkZCRGjRpVa4yNjY1iieby5csoLy9/JsFT0+Tn54dz585h0qRJqKys1HQ4RKRm\nSs+uAR6fQhkcHAy5XI7p06fjs88+Q2hoKNzd3TFy5EhcvnwZM2bMQHFxMXR1dfHdd99h6NChjRE/\nqUFpaSkCAwMhk8mwe/duGBkZaTokIlITlZI8iV9lZSWmTZuGGzdu4NChQ2jTpo2mQyIiNeAiLAEA\n9PX1ER4eDmdnZwwZMgT37t3TdEhEpAZM8qSgq6uLNWvWwM/PD97e3sjJydF0SET0ipSeXUPaRUdH\nB8uWLYOpqSm8vb1x9OhRODg4aDosIqonJnmq07x582BiYgKJRIIjR47A1dVV0yERUT0wydNzTZs2\nDW3atMHw4cOxd+9eeHl5aTokInpJPLuGlDp27BgmTpyIbdu2YcSIEZoOh4heAg+8klI+Pj6IiorC\nlClTsGvXLk2HQ0Qvgcs1pBJPT08cO3YMvr6+KCwsxIwZMzQdEhGpgEmeVObs7Iz4+Hj4+Pjg4cOH\n+Nvf/qbpkIhICa7J00vLy8uDj48P/P39sXz58me6khJR08EkT/WSn58PX19f9OnTB+vWrWMHS6Im\nikme6q2oqAj+/v4wNzdHeHg49PX1NR0SET2F5RfVm7GxMY4cOYLi4mIEBASgpKRE0yER0VOY5OmV\ntGrVCnv37oWZmRlGjBiBwsJCTYdERDUwydMrYwdLoqaLSZ7Ugh0siZomnidPasMOlkRND5M8qR07\nWBI1HUzy1CDYwZKoaeB58tSg2MGSSLN44JUaFDtYEmkWl2uowbGDJZHmMMlTo6jZwbKgoADz58/X\ndEhEWoFr8tSo2MGSqHExyVOjYwdLosbDJE8awQ6WRI2DJRRpBDtYEjUOJnnSGHawJGp4TPKkUexg\nSdSwmORJ49jBkqjh8Dx5ahLYwZKoYTDJU5PCDpZE6sUkT00OO1gSqQ/Pk6cmix0siV4dD7xSk8UO\nlkSvTqUkHxMTA0dHRzg4OCAsLKzOMbt27YKTkxN69uyJSZMmqTVI0l7VHSxDQkKwceNGTYdD1Owo\nXa6Ry+VwcHBAXFwcLCws4O7ujsjISDg6OirGZGRkIDAwECdOnICxsTHy8/PRrl27Bg+etEdGRgZ8\nfHwwZ84cdrAkeglKK/mkpCTY29vDxsYG+vr6CAoKQlRUVK0xGzduxEcffQRjY2MAYIIntevatStO\nnz6NLVu24PPPPwcPJRGpRmmSz8vLg7W1tWLbysoKeXl5tcakpaXh6tWr8PLyQv/+/REbG6v+SEnr\nWVpa4uTJkzh+/DjmzJkDuVyu6ZCImjylSb6uiunpHuBVVVXIyMjAyZMnsXPnTnzwwQcoKipSX5RE\n/9OuXTvExcXhypUrmDRpEiorKzUdElGTpvQ8eSsrK2RnZyu2c3NzYWFh8cwYT09P6OrqwtbWFt26\ndUN6ejp69+5da5xUKoVUKlVsSyQSSCSSV3sHpHWqO1gGBgYiICAAu3fvhpGRkabDIlIbdeZKpQde\nZTIZunXrhri4OJibm6Nv376IiIhA9+7dFWNiY2MRERGBrVu3Ij8/H71790ZKSgpMTU3rFRSRKior\nKzFt2jTcuHEDhw4dQps2bTQdElGTo3S5Rk9PD2vXrsWwYcPg5OSEoKAgdO/eHaGhoTh8+DAAYPjw\n4Wjbti2cnJwwdOhQrFixggmeGhw7WBIpxyteqdkTBAGLFy/G7t27cezYsVonChBpO/auoWaPHSyJ\nno9JnkSDHSyJnsUkT6LCDpZEtXFNnkTp6NGjmDhxIrZv384OlqTV2IWSRGnYsGE4ePAgO1iS1uNy\nDYlWdQdLX19fFBYWYsaMGZoOiajRMcmTqDk7OyM+Ph4+Pj4oKChgB0vSOlyTJ62Ql5cHHx8f+Pv7\nY/ny5c/0XyISKyZ50hr5+fnw9fVFnz59sG7dOujq8pAUiR+TPGmVoqIi+Pv7w9zcHOHh4dDX19d0\nSEQNiqUMaZXqDpbFxcUICAhASUmJpkMialBM8qR1WrVqhb1798LMzAwjRoxAYWGhpkMiajBM8qSV\n2MGStAWTPGktXV1drFmzBn5+fvD29kZOTo6mQyJSO54nT1qNHSxJ7JjkicAOliReTPJE/8MOliRG\nPE+e6CnsYEliopUHXuVyOR48eKDpMKiJYgdLEhOtTPJZWVlwcHDA6tWrIZfLNR0ONUHVHSxDQkKw\nceNGTYdDVG9au1yTkZGBadOmQRAEbN68Gfb29poOiZqgjIwM+Pj4YM6cOexgSc2SVlbyANC1a1dI\npVKMHTsWnp6erOqpTl27dsXp06exZcsWfP7559DSmoiaMa2t5GtiVU/KsIMlNVf8SQWrelKuXbt2\niIuLw5UrVzBp0iRUVlZqOiQilbCSfwqrenqR0tJSBAYGQiaTYffu3TAyMtJ0SEQvxEr+Kazq6UXY\nwZKaG1byL8Cqnp5HLpdj7ty5SEhIQExMDNq3b6/pkIjqxEr+BVjV0/OwgyU1F6zkVcSqnp5n5cqV\n+PHHH9nBkpokvSVLlizRdBDNgZmZGaZMmYLi4mJMnjwZBgYG6Nu3L3R0dDQdGmmYp6cnjI2NMXny\nZAwdOhSdOnXSdEhECqzk64FVPdVl7969mDNnDvbt24cBAwZoOhwiAFyTrxeu1VNdxowZg+3bt2P0\n6NGIiYnRdDhEAFjJvzJW9fS0hIQEBAQEYM2aNRg/frymwyEtx0r+FbGqp6exgyU1Jazk1YhVPdXE\nDpbUFLCSVyNW9VQTO1hSU6BSko+JiYGjoyMcHBwQFhb23HF79uyBrq4ukpOT1RZgc6Orq4vg4GAk\nJiZi3759GDRoENLT0zUdFmmIpaUlTp48iePHj2POnDn8T58andIkL5fL8ec//xmxsbG4dOkSIiIi\ncOXKlWfGFRcXY82aNfDw8GiQQJsbVvVUjR0sSZOUJvmkpCTY29vDxsYG+vr6CAoKQlRU1DPjFi1a\nhE8//RQtW7ZskECbI1b1VM3Y2BhHjhxBcXExRo8ejZKSEk2HRFpCaZLPy8uDtbW1YtvKygp5eXm1\nxqSkpCA3Nxd+fn7qj1AEWNUT8KSDpampKTtYUqNRmuTrOlhU81J+QRAQEhKC77///oXP0Xas6gkA\n9PX1ER4eDmdnZwwZMgT37t3TdEgkci2UDbCyskJ2drZiOzc3FxYWFortR48e4dKlS5BIJBAEAbdv\n34a/vz8OHjwINze3WvuSSqWQSqWKbYlEAolE8urvohmprurXrFkDT09PLFy4EHPnzuXt5LRIdQfL\nxYsXw9vbG8eOHav12zKROnOl0vPkZTIZunXrhri4OJibm6Nv376IiIhA9+7d6xw/ePBgrFy5Er16\n9apXQNqE59UTO1hSQ1NaPurp6WHt2rUYNmwYnJycEBQUhO7duyM0NBSHDx9+ZryOjg6Xa1TEtXqa\nN28eFi9eDIlEgpSUFE2HQyLEK16bCFb12o0dLKmhcCG4iWBVr93YwZIaCiv5JohVvfZiB0tSN1by\nTRCreu3FDpakbqzkmzhW9dqJHSxJXVjJN3Gs6rUTO1iSurCSb0ZY1Wuf/Px8+Pr6ok+fPli3bh0v\nmqOXxp+YZoRVvfZhB0t6VazkmylW9dqltLQUgYGBkMvl2LVrF4yMjDQdEjUTrOSbKVb12oUdLKm+\nWMmLAKt67SGXyzF37lwkJCQgJiYG7du313RI1MSxkhcBVvXao7qDpZ+fH7y9vZGTk6PpkKiJYyUv\nMqzqtQc7WJIq9JYsWbJE00GQ+piZmWHKlCkoLi7G5MmTYWBggL59+9a60QuJg6enJ4yNjTF58mQM\nHToUnTp10nRI1ASxkhcxVvXagR0s6UW4Ji9iXKvXDuxgSS/CSl5LsKoXP3awpLqwktcSrOrFjx0s\nqS6s5LUQq3pxYwdLqomVvBZiVS9u7GBJNbGS13Ks6sWLHSwJYCWv9VjVixc7WBLASp5qYFUvTuxg\nqd1YyZMCq3pxYgdL7cZKnurEql582MFSO7GSpzqxqhcfdrDUTqzkSSlW9eLDDpbag10oSSl2thQf\ndrDUHqzk6aWwqhcXdrAUP67J00vhWr24sIOl+LGSp3pjVS8e7GApXqzkqd5Y1YsHO1iKFyt5UgtW\n9eLADpbiw0qe1IJVvTjU7GD5xRdfsIOlCLCSJ7VjVd/8sYOlePCTI7VjVd/8sYOleLCSpwbFqr55\nYwfL5k+lSj4mJgaOjo5wcHBAWFjYM4+vWrUKTk5OcHV1hY+PD3tikAKr+uaNHSybP6WVvFwuh4OD\nA+Li4mBhYQF3d3dERkbC0dFRMSY+Ph79+vWDoaEhfv75Z0ilUkRGRjZ48NS8sKpvvtjBsvlSWskn\nJSXB3t4eNjY20NfXR1BQEKKiomqNGTRoEAwNDQEAHh4eyMvLa5hoqVljVd981exgOXDgQP623owo\nTfJ5eXmwtrZWbFtZWb0wiW/atAm+vr7qiY5ER1dXF8HBwUhMTMS+ffswaNAgpKenazosUoGOjg6W\nLVuGGTNmwNvbG2lpaZoOiVTQQtmAulZzntd9cMeOHTh79izi4+PrfFwqlUIqlSq2JRIJJBKJapGS\nqFRX9WvWrIGnpycWLlyIuXPn8lS9ZmDevHkwMTGBRCLBkSNH4OrqqumQREetuVJQIiEhQRg+fLhi\n++uvvxa++eabZ8YdO3ZM6NGjh5Cfn69sl0S1pKenC97e3oKXl5eQlpam6XBIRXv27BE6dOggnD59\nWtOh0AsoTfJVVVWCnZ2dkJWVJZSXlwsuLi5CampqrTHJycmCnZ2dkJGR0WCBkrjJZDJh9erVQtu2\nbYVVq1YJMplM0yGRCmJjY4X27dsL0dHRmg6FnkOl8+RjYmIQHBwMuVyO6dOn47PPPkNoaCjc3d0x\ncuRI+Pj44OLFizA3N4cgCLCxscGBAwfq96sFaTWegdP8sINl08aLoajJkcvlWLNmDZYtW8a1+mbi\nwoUL8PX1xZIlSzBjxgxNh0M1MMlTk8WqvnlhB8umieURNVk8r755YQfLpomVPDULrOqbj6c7WOro\n6EAqlWLw4MGaDk0rsZKnZuFFVf2DBw+QmZmp4Qip2tMdLMvLyzF27FhkZ2drOjStxEqemp2nq/qb\nN29i1qxZ+P3336Gvr6/p8Oh/anawNDc3h62tLRYsWKDpsLQOK3lqdp6u6pOTk9G5c2f89NNPmg6N\naoiLi8OsWbNgbGyMM2fOYMuWLVyn1wBW8tRsCYKAjIwMTJ8+HcXFxbhx4wbS0tLQtm1bTYdGAH79\n9VesX78eFy9eRNu2bZGVlYVDhw7h7bff1nRoWoWVPDVb3333HXr37o2CggJUVFTg4cOHmDBhgqbD\nov+ZOHEifvvtN1y7dg1Lly6Fs7MzLl26pOmwtA4reWrWCgoKkJWVhaysLJw5cwbl5eVYsWKFpsMi\najKY5KlBpaamYuzYsQgODoZEIsG7776L2bNnY8SIERg9ejSmTZuGgIAAjB49GhMmTMCECRMQEBCA\nd999F1OnToW/vz/8/PwwZ84cjBo1CkOHDkVISAgCAgLQv39/fPbZZwgICEDv3r0RGhqK0aNHw8nJ\nCV999RXGjBkDOzs7rFixAmPHjoWVlRV++OEHjB8/Hu3bt8e6deswceJEtG7dGhs2bMCkSZNgYGCA\nzZs3Y+rUqZDJZNi2bRs++OADlJSUYOfOnZg9ezbu37+Pf/7znwgODkZeXh52796NTz75BNeuXcO+\nffvw+eefIzU1Ffv378eSJUuQnJyMAwcO4Ouvv0ZCQgIOHDiAlStX4sSJE4iKisK6desQExODqKgo\nbNq0Cfv370dUVBR+/fVXREZG4sCBA9i7dy/Cw8Oxf/9+2NnZaezzlMvlePDgAe7evYvCwkKUlZWh\nrKwM5eXlz3xd/XdpaanisaqqqgaJS19fH4aGhmjVqhUMDQ1haGiIli1bvvBrMzMzdOjQAW3atHlu\nZ10xYJKnBnP79m306tULY8eOxd69e1FeXo733nsPBw4cQElJCYKCgnD48GEUFxdj/PjxiI2NRWFh\nIcaOHYu4uDg8ePAA7777Lk6ePIn8/HwEBAQgISEBd+7cwTvvvIOzZ8/i5s2b8PPzw++//46cnBwM\nHz4caWlpyMzMxFtvvYXMzExcu3YNgwcPxs2bN3H16lV4e3vj/v37SE1NRf/+/VFcXIwLFy6gb9++\nqKqqQnJyMtzc3KCnp4czZ87AxcUFRkZGSEhIwJtvvglTU1OcOnUKjo6O6NSpE6RSKbp27QobGxvE\nxcWhS5cusLe3x9GjR9G5c2c4OTkhOjoalpaWcHNzw6FDh9CpUyd4eHjgwIEDaN++Pby9vbF//36Y\nmppi6NCh2LNnD4yNjTFixAjs2rULrVu3hp+fHw4fPowLFy7A1NS0UT7DsrIyzJs3DydOnEB+fj4e\nPnyI1q1bo23btnj99ddhYGCAli1bwsDAAPr6+jAwMKjz65YtW0JfXx96enpqT6iCIKCqqgoVFRWK\nP5WVlc/8XV5ervi7vLwcRUVFuH//PsrLyxUJf/z48ViwYIGokr7SfvJE9VX9D8XS0hIbNmzAnTt3\n4OrqihEjRuDmzZtwc3PDyJEjkZ2djT59+iAgIACZmZlwd3fHmDFjkJGRgX79+mHChAm4cuUKPDw8\nMGnSJFy6dAn9+/fHo0ePcP78eQwYMAB//PEHzp07By8vL5SUlODs2bPw9vZGWVkZ/vvf/2LgwIGo\nqKhAYmIiBg4ciMrKSiQkJMDb2xsymQy//fYbvL29AQCnTp2q9bWXlxd0dXVx6tQpeHp6Ql9fHydP\nnoSHhwcMDAwwYMAAeHh4oGXLlvD09IS7uztatWoFDw8P9OrVC6+99hr69u0LFxcXtG7dGn369IGT\nkxPatGkDNzc3dO/eHSYmJujVqxccHBxgZmYGV1dXvPHGG2jXrh1cXV1hY2ODhISEWvPaGFavXo3z\n589j4cKFaNeuHUxMTNCihbjSRnl5OQoKCnD37l38/e9/h6urK0aOHKnpsNSGlTw1qLi4OPj6+uLk\nyZM8h/0VPHr0CG+99RZ+++039OvXr9Fe18fHB2+//bbiPz2x27p1K1q0aIFVq1ZpOhS14dk11GCK\ni4sxf/58/OlPf6p3gj979ixCQkLq9dyvvvoKWVlZz338l19+wZkzZ+q1b3U6fPgwvv322xeOad26\nNcaNG4d58+ahrKyskSIDrly5gi5durzUc2bNmoUrV67U6/WysrLw3nvvYdKkSWq/V/TAgQOVjrG1\ntcXly5fV+rqaxiRPDeb27du4cuUKhg0bppHXX7BgAWxtbZ/7+KxZs+Du7t54Ab2AsiUYHR0d+Pr6\n4ty5c7h//36jxFRcXIz8/HyYm5s3yusBj297J5FIsGPHDlhaWqp136osc3Xp0qXe/0E1VeJaXKMm\npWvXrvjpp58QHByMqKgotGjRAp988gnu3r2L8vJyxZk0T/vPf/6DlStXwtTUFN26dVN8v6ysDN9+\n+y2uXbsGmUyGGTNmYNCgQYr+8wkJCdDV1UVAQADGjx+PWbNmISQkBA4ODli2bBkuX74MHR0djBo1\nChMmTMDSpUvh7e2NIUOGICkpCT/88APkcjl69OiBzz//HC1atMCoUaPw9ttv49SpU5DJZPjmm29g\nY2NTK97Dhw8jPj4e5eXlyM3NhUQiwdy5cwE8vuHO1q1bAQADBgzAX/7yFwDAwYMHsXXrVrRv3x6d\nO3eGgYEBgMenhC5fvhx37twB8Ph+qi4uLigtLUVISEiDJL/nycnJgbm5OfT09BTfU+XzqykxMREb\nNmxAZWUlrKysEBoaCkNDQ/zjH//AqVOnUF5eDmdnZ3zxxRf47bffEBERgRYtWuDcuXPPXME8cOBA\nBAUF4fTp0zA0NMT3338PU1NT3L59G19++SUKCgpgYmKC0NBQdOzYETdv3sTChQshk8ng6elZa1/b\nt2/HsWPHUFVVBYlEgpkzZwJ4fPwoJydHTTPYNLCSpwYjCAKkUineeOMNxU0/QkNDsW3bNmzbtg0R\nEREoKiqq9ZyKigp89dVXWL16NTZu3Firat20aRP69u2L8PBw/Pzzz/jhhx9QVlaGffv24ebNm4iI\niMDOnTvh6+tba59paWm4e/cuIiMjERERgXfeeeeZ11y6dCnCwsIQERGBqqoq7NmzR/G4mZkZduzY\ngTFjxmD79u11vtf09HR88803iIyMxLFjx3D37l3k5+dj7dq1+OWXX7Bz506kpqYiPj4e+fn52LBh\nA7Zs2YJ169bh+vXriv2sWLECEydORHh4OMLCwvD3v/8dwONTBG1tbXHixIlGaw0gCEKtBA8o//xq\nKigowObNm7F+/Xps374djo6O2LFjBwAgMDAQ4eHhiIyMRFlZGU6fPo0BAwZgzJgxmDBhQp0tKkpL\nS+Hs7IydO3fC1dUV+/fvBwCEhYVh5MiR2LlzJ0aMGIHvvvsOwOO5HDduHMLDw2tdBZ2YmIjs7Gxs\n27YNv/76Ky5fvoyUlBQAgK6uruhaL7CSpwbz+++/49dff8XBgwcVSX7nzp2Ij48HANy9exfZ2dl4\n8803Fc/JysqCpaUlrKysAAC+vr6Kf8z//e9/cerUKWzbtg0AUFVVhdu3byMpKQljx45V/Dr++uuv\n14rD0tISN2/exIoVKxRnwtR048aNWq85cuRI7N69G0FBQQCgaJHr6OiIEydO1Ple3d3dYWRkBAB4\n4403cOvWLRQUFKBPnz5o06YNAGDEiBE4d+4cBEGo9X0fHx9F9ZiUlITMzExFoikpKUFpaSlatWqF\nxYsX491330VISAjeeOMNVT8GtVL2+dV08eJFXL9+HdOnT1ec5ujs7Azg8fvcvn07ysrK8OjRI9jZ\n2cHLy+uFr21gYKAY0717dyQlJQF4/HNWfQGcn58f1qxZAwA4f/68IuH7+flh7dq1AB7/HCUlJWHi\nxIkQBAFlZWXIzs6Gq6vrq0xNk8UkTw2mZ8+e+OCDD7Bo0SKsW7cOKSkp+L//+z9s3boVBgYGmDVr\nFioqKlTenyAI+Pbbb9G5c+dnvv+i9dbXX38dERERSEhIwK5du3D8+HEsWrSo1vNfpPqgsZ6eHmQy\nWZ1jqpdbgMfVoEwmgyAIde77RbEKgoCtW7c+c6C6srISixYtwieffKKxBH/27NmX+vwEQYCHh4fi\nt5FqFRUV+Pbbb7Fjxw60b98eGzZsUOnnoOapm7q6uooLq56ez5rb1V/X/BwEQcD777+P0aNHK31N\nMeByDTUYHR0duLq64tatWxAEAcXFxYoLaLKysnDx4sVnnmNra4tbt24pzqyIjY1VPObh4YHIyEjF\n9tWrVxXf37t3ryIBP72EUFBQAJlMhsGDB2P27NnPHFirfs3c3FwAwJEjR9C7d+9Xfv9vvvkmzp07\nh8LCQshkMsTGxsLNzQ1OTk5ITk5GUVERqqqqEBcX99z3mJaWBgCQyWS4c+cOXFxcXjkuVdVMpABU\n+vxq6tmzJ86fP6+Y1+qKuTqht2nTBiUlJbXe/4s87z9jZ2dnxc9JdHS0Yo5cXV0V34+JiVGM9/Dw\nwMGDB1FQoNc8AAAMsUlEQVRaWgoAuHfvHh4+fAjg8TyL7X7CrOSpwaSlpSE4OBg7duxAixYt0L9/\nf+zduxfvvfcebGxs0LNnz2eeY2BggAULFiA4OBimpqZwdXVFRkYGAOCDDz7A999/r1hGMTc3x6pV\nqxAQEIDs7GxMmDABLVq0wOjRozFu3DhFFXfv3j0sXboUcrkcOjo6ioOfNV8zNDQUn376qeLA65gx\nYwC82oVH7dq1w0cffYRZs2YBALy8vBSn8c2cORPvv/8+2rdvD0dHR8UNUP76178iLCwMEyZMgEwm\ng5ubGz777DMYGhpi1apVmDZtGgYOHKhYWmpI1tbWuHXrFmQyGfT09FT6/IAnc1Z9EPSLL75AZWUl\ndHR0MHv2bHTu3BkBAQEIDAyEhYUFnJycVIrneZ/FJ598gi+//BI7duxQvCbweC4XLlyIyMhIDBky\nRDHew8MDWVlZmDp1KgDAyMgIy5Ytg6mpKfLy8mBtba3yHDUHvBiKGkxJSQmGDh0KOzs7fPzxx6K6\nVLyxCYKA5cuXo6CgANHR0WjZsmWjvG7nzp3x448/ii7xPc+JEycQFxeH6OhoTYeiNuL6vYSaFCMj\nI3z55ZfYs2dPgzWm0hZ//PEHDh8+jK+++qrREjzw+GBzzbN/xC4zM1Pl3yyaCyZ5ajC3bt3CxIkT\nsXz5cty+fRuJiYkAgNzcXEUfllu3buH06dMAHl88derUKQCPz9yoPosjPz8fUqkUgiDgwYMH+Pe/\n/w1BEFBQUIDjx49DEAQUFhbi2LFjkMvlePToEY4ePQq5XI7i4mLExMRAJpOhpKQEMTExqKqqQllZ\nWa2vo6OjFc2roqOjFU2toqOjUV5ejqqqKkRHRys6KcbExKCkpAQymQwxMTEoLi6GXC5HbGwsHj16\nBLlcjmPHjqGwsBCCIOD48eMoKCiAIAiK5muCICgafwFAfHw87t27B+Bxz5zbt28DAE6fPo1Hjx4h\nNDQUY8aMwYMHDxrtMxw2bBgiIyORkpKCnJwcFBcXi+oUQ7lcjsLCQmRlZSEpKQn/+te/4OPjo+mw\n1IrLNdRg7t69Czc3N/j5+eHgwYMQBAGjRo3C4cOHIZfL8c477yA6OhpVVVXw8/PD8ePHUVlZieHD\nh0MqlaK8vBw+Pj44ffo0SktLFRctFRcXY9CgQUhJSUFhYSG8vLyQmpqKBw8eoH///sjIyMDdu3fR\nr18/3LhxA7dv30afPn1w+/Zt5ObmolevXnjw4AFu3LiBnj174o8//sD169fRo0cPVFVVIS0tDQ4O\nDtDT08Ply5dhZ2cHIyMj/P7777C1tYWJiQlSUlJgZWWFjh074uzZszA3N4e1tTWSkpLQoUMH2NnZ\nISEhAWZmZujRowdOnz4NExMTuLi4ID4+Hq+//jrc3d3x73//G0ZGRhgwYACOHTsGQ0NDDBw4EEeP\nHoW+vj6GDh2K6Oho6OvrY9iwYZBKpTh37pzi9MuGVlFRgQULFkAqlSI/Px/37t1DVVUVzMzMYGxs\nrOgwWd1x8nldKKv/btGiRYN1oazuMlmz++TTX1f/KSsrQ2FhIR4+fIjXXnsN7dq1Q4cOHTBu3Lh6\nt9FoqljJU4Pp0KGDIimFhYUhMTER58+fx7Jly3DmzBlcvHgRCxcuxNmzZ3H16lXMnz8f586dQ0ZG\nBoKDg3HhwgVkZ2fjww8/xMWLF3Hz5k28//77SE1NRX5+PgIDA3HlyhUUFRXB398faWlpKC0txbBh\nw5Ceng6ZTAaJRIJr165BT08PHh4euH79OoyMjODq6orMzEyYmpqie/fuyMzMRKdOndClSxdkZmai\nS5cusLCwQGZmJhwdHWFmZobMzEy4uLjgtddew/Xr19GvXz/o6+vj2rVrGDRokOJ2hD4+PigrK0Na\nWhpGjRqFoqIiXLlyBePGjUN+fj5SU1MxefJk3Lp1CxcvXsTMmTORnZ2NCxcu4C9/+QuuX7+OlJQU\nzJ8/H2lpaUhOTsYXX3yBy5cvIz4+vtESPPD4oPR3332HM2fOIDMzE8XFxXj48CESExPxz3/+E5s2\nbcLKlSuxdOlS/PWvf8WMGTMQFBSEt99+GwMHDoSrqyvs7OzQvn17GBoaQi6XQyaTqfWPXC5Hq1at\n0KlTJzg4OKB3796QSCR45513MHHiRHz44YeYP38+li1bhh9++AGbN2/Gvn37kJKSgj/++AMFBQXI\nyMjAf/7zH9EleICVPBGRqLGSJyISMSZ5IiIRY5InIhIxJnkiIhFjkiciEjEmeSIiEWOSJyISMSZ5\nIiIRUynJx8TEwNHREQ4ODggLC3vm8YqKCgQFBcHe3h6enp7Izs5We6BERPTylCZ5uVyOP//5z4iN\njcWlS5cQERHxzE0XNm3aBDMzM6Snp+Pjjz/G3/72tzr3JZVK1RK0GHAunuBcPMG5eIJz8cSrzIXS\nJJ+UlAR7e3vY2NhAX18fQUFBiIqKqjUmKioKU6ZMAQCMHTv2uXd64Yf2BOfiCc7FE5yLJzgXTzRo\nkn/6TilWVlaKW7PVNUZPTw8mJiaN2g6ViIjqpjTJq3Ij4qfHKLuxMhERNQ6l93i1srKqdSA1NzcX\nFhYWtcZYW1sjJycHFhYWkMlkKCoqgqmp6TP7MjExwZIlSxTbEokEEomk/tE3Y9r6vuvCuXiCc/GE\nNs+FVCqttURjYmJS730pbTUsk8nQrVs3xMXFwdzcHH379kVERAS6d++uGLN+/XpcvHgR69evR2Rk\nJA4cOFDrjvNERKQZSit5PT09rF27FsOGDYNcLsf06dPRvXt3hIaGwt3dHSNHjsT06dPxpz/9Cfb2\n9mjbti0TPBFRE8GbhhARiViDXPHKi6eeUDYXq1atgpOTE1xdXeHj44OcnBwNRNk4lM1FtT179kBX\nVxfJycmNGF3jUmUudu3aBScnJ/Ts2ROTJk1q5Agbj7K5yMnJwZAhQ+Dm5gZXV1dER0drIMqGN336\ndHTs2BHOzs7PHTN37lzY29vD1dUVKSkpqu1YUDOZTCbY2dkJWVlZQkVFheDi4iJcvny51pj169cL\ns2fPFgRBECIjI4XAwEB1h9EkqDIXUqlUKC0tFQRBEH766SetngtBEIRHjx4JAwcOFDw9PYWzZ89q\nINKGp8pcpKenC25ubkJhYaEgCIJw7949TYTa4FSZi5kzZwo///yzIAiCkJqaKtja2moi1AZ36tQp\n4dy5c0LPnj3rfPzIkSOCn5+fIAiCkJiYKPTr10+l/aq9klfnxVPNnSpzMWjQIBgaGgIAPDw8nrkG\nQSxUmQsAWLRoET799FO0bNlSA1E2DlXmYuPGjfjoo49gbGwMAGjXrp0mQm1wqsyFrq4uioqKAAAF\nBQWwtLTURKgNzsvLq86zEqtFRUVh8uTJAIB+/fqhsLAQd+7cUbpftSd5Xjz1hCpzUdOmTZvg6+vb\nGKE1OlXmIiUlBbm5ufDz82vs8BqVKnORlpaGq1evwsvLC/3790dsbGxjh9koVJmL0NBQbN++HdbW\n1hg5ciTWrFnT2GE2CU/PlaWlpUpFodKza16WwIunFFSZi2o7duzA2bNnER8f39BhaYSyuRAEASEh\nIQgPD3/hc8RAlZ+LqqoqZGRk4OTJk8jOzoa3tzcuXbqkqOzFQpW5iIiIwNSpUxESEoLExERMmjQJ\nly5daqwQm4yXySc1qb2Sf5mLpwC88OKp5k6VuQCA48eP4+uvv8ahQ4egr6/fmCE2GmVz8ejRI1y6\ndAkSiQRdunRBYmIi/P39RXnwVZWfCysrK/j7+0NXVxe2trbo1q0b0tPTGzvUBqfKXGzatAnjx48H\n8HhJs6ysDPn5+Y0aZ1NgZWVV68SM5+WTZ7zisYJnVFVVKQ6klJeXCy4uLkJqamqtMevWrVMceI2I\niBDtwUZV5iI5OVmws7MTMjIyNBRl41BlLmqSSCRCcnJyI0bYeFSZi5iYGGHKlCmCIDw+6Nq5c2fh\nwYMHGoi2YakyF35+fsLWrVsFQXh84NXS0lIToTaKzMxM4c0336zzsX/961+KA68JCQkqH3hVe5IX\nBEGIjo4WHBwchK5duwpff/21IAiCsHjxYuHQoUOCIAhCWVmZMG7cOKFr165Cv379hMzMzIYIo0lQ\nNhdvvfWW0KlTJ6FXr16Cq6ur4O/vr8lwG5Syuahp8ODBoj27RhBUm4t58+YJPXr0EJydnYVdu3Zp\nKtQGp2wuUlNThQEDBgguLi5Cr169hOPHj2sy3AYzYcIEwdzcXDAwMBCsra2FzZs3Cz///LPwyy+/\nKMZ89NFHgp2dneDs7Kzyvw9eDEVEJGK8/R8RkYgxyRMRiRiTPBGRiDHJExGJGJM8EZGIMckTEYkY\nkzwRkYgxyRMRidj/A0ER7oozCCzDAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f1e7800c510>"
+       "<matplotlib.figure.Figure at 0x7fdd44211410>"
       ]
      },
      "metadata": {},
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -408,14 +408,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'no surfacing': {0: 'no', 1: {'flippers': {0: {'head': {0: 'no', 1: 'yes'}}, 1: 'no'}}}}\n",
+      "['no surfacing']\n",
       "4\n",
       "3\n"
      ]
     }
    ],
    "source": [
-    "print myTree\n",
+    "print myTree.keys()[0]\n",
     "print getNumLeafs(myTree)\n",
     "print getTreeDepth(myTree)"
    ]
