--- a/Ch11/Ch11-Apriori.ipynb
+++ b/Ch11/Ch11-Apriori.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
        " frozenset({2, 5})]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -235,6 +235,347 @@
     "L,suppData=apriori(dataSet,minSupport=0.6)\n",
     "for each in L:\n",
     "    print each"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def generateRules(L, supportData, minConf=0.7):  #supportData is a dict coming from scanD\n",
+    "    bigRuleList = []\n",
+    "    for i in range(1, len(L)):#only get the sets with two or more items\n",
+    "        for freqSet in L[i]:\n",
+    "            H1 = [frozenset([item]) for item in freqSet]\n",
+    "            if (i > 1):\n",
+    "                rulesFromConseq(freqSet, H1, supportData, bigRuleList, minConf)\n",
+    "            else:\n",
+    "                calcConf(freqSet, H1, supportData, bigRuleList, minConf)\n",
+    "    return bigRuleList         \n",
+    "\n",
+    "def calcConf(freqSet, H, supportData, brl, minConf=0.7):\n",
+    "    prunedH = [] #create new list to return\n",
+    "    for conseq in H:\n",
+    "        conf = supportData[freqSet]/supportData[freqSet-conseq] #calc confidence\n",
+    "        if conf >= minConf: \n",
+    "            print freqSet-conseq,'-->',conseq,'conf:',conf\n",
+    "            brl.append((freqSet-conseq, conseq, conf))\n",
+    "            prunedH.append(conseq)\n",
+    "    return prunedH\n",
+    "\n",
+    "def rulesFromConseq(freqSet, H, supportData, brl, minConf=0.7):\n",
+    "    m = len(H[0])\n",
+    "    if (len(freqSet) > (m + 1)): #try further merging\n",
+    "        Hmp1 = aprioriGen(H, m+1)#create Hm+1 new candidates\n",
+    "        Hmp1 = calcConf(freqSet, Hmp1, supportData, brl, minConf)\n",
+    "        if (len(Hmp1) > 1):    #need at least two sets to merge\n",
+    "            rulesFromConseq(freqSet, Hmp1, supportData, brl, minConf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset([1]) --> frozenset([3]) conf: 1.0\n",
+      "frozenset([5]) --> frozenset([2]) conf: 1.0\n",
+      "frozenset([2]) --> frozenset([5]) conf: 1.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(frozenset({1}), frozenset({3}), 1.0),\n",
+       " (frozenset({5}), frozenset({2}), 1.0),\n",
+       " (frozenset({2}), frozenset({5}), 1.0)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L,suppData=apriori(dataSet,minSupport=0.5)\n",
+    "rules=generateRules(L,suppData,minConf=0.7)\n",
+    "rules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset([3]) --> frozenset([1]) conf: 0.666666666667\n",
+      "frozenset([1]) --> frozenset([3]) conf: 1.0\n",
+      "frozenset([5]) --> frozenset([2]) conf: 1.0\n",
+      "frozenset([2]) --> frozenset([5]) conf: 1.0\n",
+      "frozenset([3]) --> frozenset([2]) conf: 0.666666666667\n",
+      "frozenset([2]) --> frozenset([3]) conf: 0.666666666667\n",
+      "frozenset([5]) --> frozenset([3]) conf: 0.666666666667\n",
+      "frozenset([3]) --> frozenset([5]) conf: 0.666666666667\n",
+      "frozenset([5]) --> frozenset([2, 3]) conf: 0.666666666667\n",
+      "frozenset([3]) --> frozenset([2, 5]) conf: 0.666666666667\n",
+      "frozenset([2]) --> frozenset([3, 5]) conf: 0.666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "rules=generateRules(L,suppData,minConf=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#p220"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mushDatSet=[line.split() for line in open('mushroom.dat').readlines() ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset(['2', '59'])\n",
+      "frozenset(['39', '2'])\n",
+      "frozenset(['2', '67'])\n",
+      "frozenset(['2', '34'])\n",
+      "frozenset(['2', '23'])\n",
+      "frozenset(['2', '86'])\n",
+      "frozenset(['76', '2'])\n",
+      "frozenset(['90', '2'])\n",
+      "frozenset(['2', '53'])\n",
+      "frozenset(['93', '2'])\n",
+      "frozenset(['63', '2'])\n",
+      "frozenset(['2', '28'])\n",
+      "frozenset(['2', '85'])\n",
+      "frozenset(['2', '36'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "L,suppData=apriori(mushDatSet,minSupport=0.3)\n",
+    "for item in L[1]:\n",
+    "    if item.intersection('2'):print item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset(['63', '59', '2', '93'])\n",
+      "frozenset(['39', '2', '53', '34'])\n",
+      "frozenset(['2', '59', '23', '85'])\n",
+      "frozenset(['2', '59', '90', '85'])\n",
+      "frozenset(['39', '2', '36', '34'])\n",
+      "frozenset(['39', '63', '2', '85'])\n",
+      "frozenset(['39', '2', '90', '85'])\n",
+      "frozenset(['2', '59', '90', '86'])\n",
+      "frozenset(['2', '90', '93', '86'])\n",
+      "frozenset(['39', '2', '63', '86'])\n",
+      "frozenset(['39', '2', '93', '34'])\n",
+      "frozenset(['76', '39', '2', '34'])\n",
+      "frozenset(['39', '2', '59', '86'])\n",
+      "frozenset(['2', '59', '90', '36'])\n",
+      "frozenset(['2', '59', '93', '85'])\n",
+      "frozenset(['2', '59', '86', '34'])\n",
+      "frozenset(['2', '63', '90', '86'])\n",
+      "frozenset(['39', '63', '2', '36'])\n",
+      "frozenset(['2', '67', '86', '85'])\n",
+      "frozenset(['2', '28', '53', '85'])\n",
+      "frozenset(['2', '59', '93', '36'])\n",
+      "frozenset(['63', '23', '2', '34'])\n",
+      "frozenset(['2', '23', '36', '85'])\n",
+      "frozenset(['2', '90', '34', '85'])\n",
+      "frozenset(['39', '2', '59', '34'])\n",
+      "frozenset(['39', '2', '90', '34'])\n",
+      "frozenset(['2', '59', '28', '85'])\n",
+      "frozenset(['2', '34', '28', '85'])\n",
+      "frozenset(['2', '59', '23', '36'])\n",
+      "frozenset(['2', '23', '93', '36'])\n",
+      "frozenset(['2', '23', '86', '85'])\n",
+      "frozenset(['39', '2', '34', '85'])\n",
+      "frozenset(['2', '93', '86', '34'])\n",
+      "frozenset(['63', '59', '2', '36'])\n",
+      "frozenset(['63', '2', '28', '85'])\n",
+      "frozenset(['2', '67', '86', '34'])\n",
+      "frozenset(['39', '2', '67', '85'])\n",
+      "frozenset(['2', '23', '90', '85'])\n",
+      "frozenset(['39', '2', '28', '85'])\n",
+      "frozenset(['39', '2', '90', '86'])\n",
+      "frozenset(['76', '2', '86', '34'])\n",
+      "frozenset(['2', '93', '36', '34'])\n",
+      "frozenset(['63', '59', '2', '85'])\n",
+      "frozenset(['2', '23', '93', '86'])\n",
+      "frozenset(['39', '2', '53', '85'])\n",
+      "frozenset(['2', '93', '86', '85'])\n",
+      "frozenset(['2', '90', '86', '85'])\n",
+      "frozenset(['2', '23', '86', '34'])\n",
+      "frozenset(['2', '93', '86', '36'])\n",
+      "frozenset(['2', '59', '86', '36'])\n",
+      "frozenset(['2', '23', '93', '85'])\n",
+      "frozenset(['2', '90', '86', '36'])\n",
+      "frozenset(['39', '2', '28', '34'])\n",
+      "frozenset(['2', '23', '86', '36'])\n",
+      "frozenset(['76', '39', '2', '85'])\n",
+      "frozenset(['2', '23', '90', '34'])\n",
+      "frozenset(['76', '2', '86', '85'])\n",
+      "frozenset(['39', '2', '23', '36'])\n",
+      "frozenset(['39', '2', '63', '34'])\n",
+      "frozenset(['2', '59', '86', '85'])\n",
+      "frozenset(['39', '2', '63', '93'])\n",
+      "frozenset(['2', '93', '34', '85'])\n",
+      "frozenset(['2', '23', '36', '34'])\n",
+      "frozenset(['39', '2', '59', '93'])\n",
+      "frozenset(['2', '90', '86', '53'])\n",
+      "frozenset(['63', '59', '2', '86'])\n",
+      "frozenset(['39', '2', '23', '63'])\n",
+      "frozenset(['2', '23', '85', '34'])\n",
+      "frozenset(['2', '23', '90', '86'])\n",
+      "frozenset(['39', '2', '67', '34'])\n",
+      "frozenset(['39', '2', '63', '28'])\n",
+      "frozenset(['39', '2', '59', '23'])\n",
+      "frozenset(['39', '2', '59', '85'])\n",
+      "frozenset(['2', '63', '90', '85'])\n",
+      "frozenset(['2', '90', '28', '85'])\n",
+      "frozenset(['2', '34', '86', '85'])\n",
+      "frozenset(['39', '2', '23', '85'])\n",
+      "frozenset(['2', '90', '86', '34'])\n",
+      "frozenset(['2', '86', '36', '85'])\n",
+      "frozenset(['2', '86', '28', '53'])\n",
+      "frozenset(['39', '2', '59', '36'])\n",
+      "frozenset(['39', '2', '93', '36'])\n",
+      "frozenset(['2', '63', '90', '36'])\n",
+      "frozenset(['2', '59', '90', '34'])\n",
+      "frozenset(['2', '90', '93', '36'])\n",
+      "frozenset(['39', '2', '93', '86'])\n",
+      "frozenset(['39', '2', '93', '85'])\n",
+      "frozenset(['2', '86', '53', '85'])\n",
+      "frozenset(['63', '2', '86', '36'])\n",
+      "frozenset(['2', '39', '63', '90'])\n",
+      "frozenset(['76', '2', '85', '34'])\n",
+      "frozenset(['2', '90', '93', '85'])\n",
+      "frozenset(['39', '2', '90', '53'])\n",
+      "frozenset(['2', '23', '90', '93'])\n",
+      "frozenset(['2', '59', '86', '28'])\n",
+      "frozenset(['2', '59', '23', '90'])\n",
+      "frozenset(['2', '86', '28', '85'])\n",
+      "frozenset(['39', '2', '28', '86'])\n",
+      "frozenset(['63', '2', '86', '85'])\n",
+      "frozenset(['2', '86', '36', '34'])\n",
+      "frozenset(['39', '2', '23', '86'])\n",
+      "frozenset(['63', '2', '28', '34'])\n",
+      "frozenset(['2', '59', '23', '34'])\n",
+      "frozenset(['2', '59', '85', '34'])\n",
+      "frozenset(['39', '2', '86', '53'])\n",
+      "frozenset(['2', '63', '59', '90'])\n",
+      "frozenset(['63', '2', '93', '34'])\n",
+      "frozenset(['63', '2', '85', '34'])\n",
+      "frozenset(['76', '39', '2', '86'])\n",
+      "frozenset(['39', '2', '67', '86'])\n",
+      "frozenset(['63', '59', '2', '34'])\n",
+      "frozenset(['63', '2', '93', '85'])\n",
+      "frozenset(['2', '59', '23', '86'])\n",
+      "frozenset(['2', '59', '36', '85'])\n",
+      "frozenset(['86', '63', '2', '28'])\n",
+      "frozenset(['39', '2', '28', '53'])\n",
+      "frozenset(['39', '2', '36', '85'])\n",
+      "frozenset(['2', '23', '93', '34'])\n",
+      "frozenset(['39', '2', '59', '63'])\n",
+      "frozenset(['63', '23', '2', '85'])\n",
+      "frozenset(['2', '28', '53', '34'])\n",
+      "frozenset(['2', '85', '36', '34'])\n",
+      "frozenset(['39', '2', '90', '93'])\n",
+      "frozenset(['39', '2', '59', '90'])\n",
+      "frozenset(['39', '2', '59', '28'])\n",
+      "frozenset(['63', '59', '23', '2'])\n",
+      "frozenset(['2', '63', '93', '86'])\n",
+      "frozenset(['2', '90', '53', '34'])\n",
+      "frozenset(['2', '59', '36', '34'])\n",
+      "frozenset(['2', '86', '53', '34'])\n",
+      "frozenset(['2', '59', '90', '28'])\n",
+      "frozenset(['2', '63', '90', '93'])\n",
+      "frozenset(['2', '90', '28', '53'])\n",
+      "frozenset(['39', '2', '86', '85'])\n",
+      "frozenset(['2', '90', '36', '85'])\n",
+      "frozenset(['2', '90', '86', '28'])\n",
+      "frozenset(['63', '23', '2', '86'])\n",
+      "frozenset(['2', '34', '53', '85'])\n",
+      "frozenset(['63', '2', '36', '34'])\n",
+      "frozenset(['2', '59', '23', '93'])\n",
+      "frozenset(['2', '59', '93', '86'])\n",
+      "frozenset(['63', '2', '93', '36'])\n",
+      "frozenset(['2', '28', '86', '34'])\n",
+      "frozenset(['39', '2', '86', '36'])\n",
+      "frozenset(['2', '90', '53', '85'])\n",
+      "frozenset(['63', '2', '86', '34'])\n",
+      "frozenset(['63', '23', '2', '36'])\n",
+      "frozenset(['2', '93', '36', '85'])\n",
+      "frozenset(['2', '63', '90', '34'])\n",
+      "frozenset(['2', '59', '93', '34'])\n",
+      "frozenset(['2', '90', '93', '34'])\n",
+      "frozenset(['63', '2', '36', '85'])\n",
+      "frozenset(['2', '67', '34', '85'])\n",
+      "frozenset(['39', '2', '23', '93'])\n",
+      "frozenset(['39', '2', '90', '36'])\n",
+      "frozenset(['2', '59', '28', '34'])\n",
+      "frozenset(['2', '90', '28', '34'])\n",
+      "frozenset(['39', '2', '86', '34'])\n",
+      "frozenset(['2', '90', '36', '34'])\n",
+      "frozenset(['39', '2', '23', '34'])\n",
+      "frozenset(['39', '2', '90', '28'])\n",
+      "frozenset(['2', '59', '90', '93'])\n",
+      "frozenset(['63', '59', '2', '28'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "L,suppData=apriori(mushDatSet,minSupport=0.3)\n",
+    "for item in L[3]:\n",
+    "    if item.intersection('2'):print item"
    ]
   }
  ],
