--- a/Ch12/Ch12-fpGrowth.ipynb
+++ b/Ch12/Ch12-fpGrowth.ipynb
@@ -247,12 +247,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def ascendTree(leafNode, prefixPath): #ascends from leaf node to root\n",
+    "    if leafNode.parent != None:\n",
+    "        prefixPath.append(leafNode.name)\n",
+    "        ascendTree(leafNode.parent, prefixPath)\n",
+    "    \n",
+    "def findPrefixPath(basePat, treeNode): #treeNode comes from header table\n",
+    "    condPats = {}\n",
+    "    while treeNode != None:\n",
+    "        prefixPath = []\n",
+    "        ascendTree(treeNode, prefixPath)\n",
+    "        if len(prefixPath) > 1: \n",
+    "            condPats[frozenset(prefixPath[1:])] = treeNode.count\n",
+    "        treeNode = treeNode.nodeLink\n",
+    "    return condPats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{frozenset({'z'}): 3}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findPrefixPath('x',myHeaderTab['x'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findPrefixPath('z',myHeaderTab['z'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{frozenset({'s', 'x'}): 1, frozenset({'z'}): 1, frozenset({'x', 'y', 'z'}): 1}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "findPrefixPath('r',myHeaderTab['r'][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def mineTree(inTree, headerTable, minSup, preFix, freqItemList):\n",
+    "    bigL = [v[0] for v in sorted(headerTable.items(), key=lambda p: p[1])]#(sort header table)\n",
+    "    for basePat in bigL:  #start from bottom of header table\n",
+    "        newFreqSet = preFix.copy()\n",
+    "        newFreqSet.add(basePat)\n",
+    "        #print 'finalFrequent Item: ',newFreqSet    #append to set\n",
+    "        freqItemList.append(newFreqSet)\n",
+    "        condPattBases = findPrefixPath(basePat, headerTable[basePat][1])\n",
+    "        #print 'condPattBases :',basePat, condPattBases\n",
+    "        #2. construct cond FP-tree from cond. pattern base\n",
+    "        myCondTree, myHead = createTree(condPattBases, minSup)\n",
+    "        #print 'head from conditional tree: ', myHead\n",
+    "        if myHead != None: #3. mine cond. FP-tree\n",
+    "            print 'conditional tree for: ',newFreqSet\n",
+    "            myCondTree.disp(1)            \n",
+    "            mineTree(myCondTree, myHead, minSup, newFreqSet, freqItemList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "freqItems=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conditional tree for:  set(['y'])\n",
+      "   Null Set   1\n",
+      "     x   3\n",
+      "       z   3\n",
+      "conditional tree for:  set(['y', 'z'])\n",
+      "   Null Set   1\n",
+      "     x   3\n",
+      "conditional tree for:  set(['s'])\n",
+      "   Null Set   1\n",
+      "     x   3\n",
+      "conditional tree for:  set(['t'])\n",
+      "   Null Set   1\n",
+      "     y   3\n",
+      "       x   3\n",
+      "         z   3\n",
+      "conditional tree for:  set(['x', 't'])\n",
+      "   Null Set   1\n",
+      "     y   3\n",
+      "conditional tree for:  set(['z', 't'])\n",
+      "   Null Set   1\n",
+      "     y   3\n",
+      "       x   3\n",
+      "conditional tree for:  set(['x', 'z', 't'])\n",
+      "   Null Set   1\n",
+      "     y   3\n",
+      "conditional tree for:  set(['x'])\n",
+      "   Null Set   1\n",
+      "     z   3\n"
+     ]
+    }
+   ],
+   "source": [
+    "mineTree(myFPtree, myHeaderTab,3,set([]), freqItems)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'y'},\n",
+       " {'x', 'y'},\n",
+       " {'y', 'z'},\n",
+       " {'x', 'y', 'z'},\n",
+       " {'s'},\n",
+       " {'s', 'x'},\n",
+       " {'r'},\n",
+       " {'t'},\n",
+       " {'t', 'y'},\n",
+       " {'t', 'x'},\n",
+       " {'t', 'x', 'y'},\n",
+       " {'t', 'z'},\n",
+       " {'t', 'y', 'z'},\n",
+       " {'t', 'x', 'z'},\n",
+       " {'t', 'x', 'y', 'z'},\n",
+       " {'x'},\n",
+       " {'x', 'z'},\n",
+       " {'z'}]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freqItems"
+   ]
   }
  ],
  "metadata": {
